# apifast_vzero

./: .coverage  .gitignore  pyproject.toml  test.db
apifast_vzero/: __init__.py  app.py  database.py  models.py  schemas.py  settings.py
migrations/: env.py
migrations/versions/: 105170d68c3a_add_updated_at_to_users.py  b92e2a2ed8ec_create_users_tabletable.py
tests/: conftest.py  test_app.py  test_db.py
