[project]
name = "apifast-vzero"
version = "0.1.0"
description = ""
authors = [
    {name = "XChrisZero",email = "vdevendetal5l@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10, <3.17"
dependencies = [
    "fastapi[standard] (>=0.129.0,<0.130.0)"
]

###############################################################################
#SISTEMA DE CONSTRUÇÃO
###############################################################################
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

###############################################################################
#DEPENDÊNCIAS DE DESENVOLVIMENTO
###############################################################################
[dependency-groups]
dev = [
    "ruff (>=0.15.1,<0.16.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "taskipy (>=1.14.1,<2.0.0)"
]

###############################################################################
#Ruff
###############################################################################
[tool.ruff]
line-length = 88 #caso queira padrão pep8, use 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = [
    "E", # Erros de estilo
    "F", # Erros de lógica
    "W", # Avisos de estilo
    "B", # Bugs comuns
    "I", # Importações
    "PL", # Problemas de formatação de string
    "PT", # boas praticas do pytest
]

[tool.ruff.format]
preview = true
quote-style = 'single' # ou "double" para aspas duplas

###############################################################################
#PYTEST
###############################################################################
[tool.pytest.ini_options]
pythonpath = "." #diretório raiz do projeto
addopts = "-p no:warnings" # Ignora os avisos durante os testes

###############################################################################
#TASKIPY
###############################################################################
[tool.taskipy.tasks]
lint = "ruff check"
format = "ruff format"
run = "uvicorn apifast_vzero.app:app"
test = "pytest -s -x --cov=tests -v"

# hooks para automatizar tarefas antes de outras tarefas
pre_format = "ruff check --fix"
pre_test = "task lint"

# hook para gerar o relatório de cobertura em HTML após os testes
post_test = 'coverage html'

###############################################################################
#POETRY
###############################################################################
[tool.poetry]
packages = [
    { include = "apifast_vzero" }
]