[project]
name = "apifast-vzero"
version = "0.1.0"
description = ""
authors = [
    {name = "XChrisZero",email = "vdevendetal5l@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10, <3.17"
dependencies = [
    "fastapi[standard] (>=0.129.0,<0.150.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)"
]

###############################################################################
#SISTEMA DE CONSTRUÇÃO
###############################################################################
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

###############################################################################
#DEPENDÊNCIAS DE DESENVOLVIMENTO
###############################################################################
[dependency-groups]
dev = [
    "ruff (>=0.15.1,<0.16.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "types-sqlalchemy (>=1.4.53.38,<2.0.0.0)"
]

###############################################################################
#Ruff
###############################################################################
[tool.ruff]
line-length = 88 #caso queira padrão pep8, use 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = [
    "E", # Erros de estilo
    "F", # Erros de lógica
    "W", # Avisos de estilo
    "B", # Bugs comuns
    "I", # Importações
    "PL", # Problemas de formatação de string
    "PT", # boas praticas do pytest
]

[tool.ruff.format]
preview = true
quote-style = 'single' # ou "double" para aspas duplas

###############################################################################
#PYTEST
###############################################################################
[tool.pytest.ini_options]
pythonpath = "." #diretório raiz do projeto
addopts = "-p no:warnings" # Ignora os avisos durante os testes

###############################################################################
#TASKIPY
###############################################################################
[tool.taskipy.tasks]
lint = "ruff check"
format = "ruff format"
run = "uvicorn apifast_vzero.app:app"
test = "pytest --cov=apifast_vzero --cov-report=term-missing"

# hooks para automatizar tarefas antes de outras tarefas
pre_format = "ruff check --fix"
pre_test = "task lint"

# hook para gerar o relatório de cobertura em HTML após os testes
post_test = 'coverage html'

###############################################################################
#POETRY
###############################################################################
[tool.poetry]
packages = [
    { include = "apifast_vzero" }
]

###############################################################################
#MYPY
###############################################################################

[tool.mypy]
plugins = [
  "sqlalchemy.ext.mypy.plugin"
]
# Se o erro persistir em outras libs, você pode usar:
ignore_missing_imports = true